<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ThemeColor_Pink"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center"
            android:id="@+id/circle_icon_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10sp"
            android:src="@drawable/login_morisa"/>

        <LinearLayout
            android:background="@drawable/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp">

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/login_name"/>

            <EditText
                android:layout_gravity="center"
                android:id="@+id/login_text_username"
                android:background="@color/CommonColor_White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/login_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp">

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="@string/login_password"/>

            <EditText
                android:layout_gravity="center"
                android:id="@+id/login_text_password"
                android:background="@color/CommonColor_White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12sp">

            <Button
                android:textSize="18sp"
                android:layout_gravity="center"
                android:id="@+id/login_btn_register"
                android:background="@drawable/login_btn_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_crop_cancel_btn_left"
                android:layout_marginRight="@dimen/login_crop_cancel_btn_right"
                android:text="@string/login_register"
                android:layout_weight="1"/>

            <Button
                android:textSize="18sp"
                android:layout_gravity="center"
                android:id="@+id/login_btn_confirm"
                android:background="@drawable/login_btn_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_crop_cancel_btn_right"
                android:layout_marginRight="@dimen/login_crop_cancel_btn_left"
                android:text="@string/login_confirm"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>