<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_activity_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:id="@+id/layout_toolbar"
                android:background="@color/ThemeColor_Pink"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="snap|enterAlways|scroll"
                app:navigationIcon="@drawable/menu_list"
                app:popupTheme="@style/OverflowMenuStyle"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                style="@style/Toolbar.MyStyle">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_toolbar"
                    android:background="@drawable/search_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:closeIcon="@drawable/cancel_icon"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/search_something"
                    app:searchIcon="@drawable/search_icon"
                    app:theme="@style/AppSearchView"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/mainView_viewPager_margin_bottom"
            android:layout_below="@+id/main_activity_action_bar">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/ViewPager_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <RadioGroup
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:background="@color/CommonColor_White"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainView_viewPager_margin_bottom">

                <RadioButton
                    android:textColor="@drawable/text_selector"
                    android:id="@+id/main_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:button="@null"
                    android:text="@string/main_page"
                    android:drawableTop="@drawable/remilia"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

                <RadioButton
                    android:textColor="@drawable/text_selector"
                    android:id="@+id/news_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/news_page"
                    android:drawableTop="@drawable/mystia"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

                <RadioButton
                    android:textColor="@drawable/text_selector"
                    android:id="@+id/shop_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/shop_page"
                    android:drawableTop="@drawable/sanae"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

                <RadioButton
                    android:textColor="@drawable/text_selector"
                    android:id="@+id/home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/home_page"
                    android:drawableTop="@drawable/reimu"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_gravity="start"
        android:id="@+id/navView_main"
        android:layout_width="250sp"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header_nav"
        app:menu="@menu/menu_nav"/>

</androidx.drawerlayout.widget.DrawerLayout>